--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <groupId>org.apache.hive</groupId>
         <artifactId>hive-exec</artifactId>
         <version>1.2.2</version>
+<!--        <version>2.3.4</version>-->
     </dependency>
     <dependency>
         <groupId>org.apache.logging.log4j</groupId>
